--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<!-- <head> <link rel="stylesheet" href="/style.css"> -->
+<head> <link rel="stylesheet" href="/style.css"> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ListaDeTarefas</title>
 </head>
 <body>
+    <main>
     <div id="app">
         <div class="topo">
             <h1>LISTA DE TAREFAS</h1>
-    <div class="elementos">   <input type="text" placeholder="Digite sua tarefa!">
-    <button> Cadastrar</button></div> 
+    <div class="elementos">   <input type="text" placeholder="Escreva suas tarefas aqui...">
+    <button> ADICIONAR</button></div> 
 </div>
+
 <div class="corpo">
+    <h3>TAREFAS:</h3>
     <ul>
     </ul>
 </div>
     </div>
+</main>
     <script src="/script.js"></script>
 </body>
 </html>
